# akrobat

./: README.md  TODO.md  demo.md  package.xml  readme.md  setup.cfg  setup.py
akrobat/: CMakeLists.txt  README.md  akrobat.py  enums.py  joystick_emulator.py  package.xml  setup.py  utils.py
akrobat/config/: akrobat_control.yaml  dynamixel_params.yaml
akrobat/launch/: AkrobatMaster.launch  gazebo.launch  generate.launch  master.launch  model.launch
akrobat/launch/include/: akrobat.launch  dynamixel.launch  generate.launch  model.launch  rviz.launch
akrobat/msg/: movement.msg
akrobat/nodes/: dynamixel_joint_state_publisher.py  foot_contact.py  generate_world_file.py  joint_states.py  joint_states_to_gazebo.py  joystick_emulator.py  main.py  smach_example_state_machine.py  translate_joypad.py
akrobat/rviz/: akrobat.rviz
akrobat/scripts/: generate_world_file.py  joint_states_to_gazebo.py  joystick_emulator.py
akrobat/src/akrobat/: TranslateJoypad.cpp  akrobat.py  coordinate_system.py  enums.py  helper.py  joint.py  joystick_emulator.cpp  leg.py  leg_settings.py  rumble_pad_2.py  trajectory.py  trajectory_settings.py
akrobat/stl/collision/: femur_link.stl  hexapod_link.stl
akrobat/stl/low_poly/: coxa_l_link.stl  coxa_r_link.stl  femur_link.stl  hexapod_link.stl  tibia_link.stl
akrobat/urdf/: akrobat.xacro  akrobat_high_poly.xacro  akrobat_low_poly.xacro  hexapod_high_poly.urdf  hexapod_low_poly.urdf  left_leg.xacro  leg-1.xacro  leg-2.xacro  leg-3.xacro  leg-4.xacro  leg-5.xacro  leg-6.xacro  right_leg.xacro  xacro_to_sdf.sh
akrobat/worlds/: default.world
config/: akrobat.rviz  akrobat_control.yaml  gazebo_bridge.yaml  ros2_control.yaml
dynamixel_motor/: CMakeLists.txt  package.xml
launch/: main.launch.py  rviz.launch.py  simulation.launch.py
launch/include/: dynamixel.launch.py  gazebo.launch.py  rviz.launch.py
stl/collision/: coxa_l_link.stl  coxa_link.stl  tibia_link.stl
stl/visual/: tibia_link.stl
urdf/: akrobat.urdf  akrobat.xacro  gazebo.xacro  inertia.py  inertia.yaml  left_leg.xacro  leg.xacro  right_leg.xacro  ros2_control.xacro
worlds/: empty.sdf
